Fix text overflow
git-svn-id: https://subversion.renater.fr/esup-sifacmiss2/trunk@9 1ea0db98-6847-4a72-bad2-ce9059f6f1a9

--- a/esup-sifac-missions2/esup-sifac-missions2-web-jsf-mixed/src/main/webapp/media/iPhone/iPhone.css
+++ b/esup-sifac-missions2/esup-sifac-missions2-web-jsf-mixed/src/main/webapp/media/iPhone/iPhone.css
@@ -183,6 +183,21 @@ a[selected =
 	min-height: 58px !important;
 }
 
+
+.listingLinkTitle {
+    display: block !important;
+    position: absolute !important;
+    top: 8px !important;
+    left: 10px !important;
+    right: 100px !important;
+    color: #000 !important;
+    font-size: 15px !important;
+    font-weight: bold !important;
+    overflow: hidden;
+    text-overflow: ellipsis !important;
+    white-space: nowrap !important;
+}
+
 .listingDetails {
     display: block !important;
     position: absolute !important;
